--- a/src/site/notes/notes/临时英语作业.md
+++ b/src/site/notes/notes/临时英语作业.md
@@ -17,7 +17,7 @@
 - [ ] 4:造句练习whose句型，5个，例如：Whose book is this? 
 5:同步训练：P32，1，2；P33，3；
   - [x] 活动P32-2：2-20
-  - [ ] 其余无听力
+  - [x] 其余无听力
 6：听录音打卡读书上P27，7；P29
   - [x] 讲义7，P27-7：2-10
   - [x] 讲义11，P29：2-15
