--- a/src/site/notes/notes/盘古身高几何.md
+++ b/src/site/notes/notes/盘古身高几何.md
@@ -2,8 +2,10 @@
 {"dg-publish":true,"permalink":"/notes/盘古身高几何/"}
 ---
 
+>参考：[[notes/中国度量衡演变\|中国度量衡演变]]
+
 # 盘古身高几何 
-初步想法，由盘古的传说开始，探究盘古的身高，讲解中国度量衡的演变和意义。对计算后的身高可可以做一个形象的类比
+初步想法，由[[notes/盘古\|盘古]]的传说开始，探究盘古的身高，讲解中国度量衡的演变和意义。对计算后的身高可可以做一个形象的类比
 ## 引子
 
 <div class="transclusion internal-embed is-loaded"><div class="markdown-embed">
